--- a/src/.devcontainer/Dockerfile
+++ b/src/.devcontainer/Dockerfile
@@ -40,5 +40,5 @@ USER $USERNAME
 RUN echo "source /opt/ros/humble/setup.bash" >> ~/.bashrc
 RUN echo "source /home/wayming/install/setup.bash" >> ~/.bashrc
 RUN echo "source /usr/share/colcon_argcomplete/hook/colcon-argcomplete.bash" >> ~/.bashrc
-
+RUN echo "export TURTLEBOT3_MODEL=waffle" >> ~/.bashrc
 CMD ["/bin/bash"]
