--- a/src/.devcontainer/devcontainer.json
+++ b/src/.devcontainer/devcontainer.json
@@ -32,6 +32,7 @@
         "--net=host",
         "-e", "DISPLAY=${env:DISPLAY}"
     ],
+    "appPort": "2222:22",
     "mounts": [
        "source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind,consistency=cached",
         "source=/dev/dri,target=/dev/dri,type=bind,consistency=cached",
