--- a/src/.devcontainer/Dockerfile
+++ b/src/.devcontainer/Dockerfile
@@ -29,11 +29,12 @@ RUN apt-get upgrade -y
 RUN apt-get install ros-humble-desktop -y
 RUN apt-get install ros-dev-tools -y
 RUN apt-get install python3-colcon-common-extensions -y
+RUN apt-get install git python3-rosdep python3-pip python3-colcon-common-extensions -y
 RUN apt-get install ros-geometry-msgs -y
-RUN apt install ros-humble-navigation2 ros-humble-nav2-bringup -y
-RUN apt install ros-humble-turtlebot3* -y
-RUN apt install ros-humble-rmw-cyclonedds-cpp -y
-RUN apt install tmux tmuxinator iputils-ping -y
+RUN apt-get install ros-humble-navigation2 ros-humble-nav2-bringup -y
+RUN apt-get install ros-humble-turtlebot3* -y
+RUN apt-get install ros-humble-rmw-cyclonedds-cpp -y
+RUN apt-get install tmux tmuxinator iputils-ping -y
 RUN apt-get install vim -y
 RUN pip3 install setuptools==58.2.0
 RUN pip3 install PySimpleGUI
@@ -41,11 +42,11 @@ RUN pip3 install PySimpleGUI
 # [Optional] Set the default user. Omit if you want to keep the default as root.
 USER $USERNAME
 RUN echo "source /opt/ros/humble/setup.bash" >> ~/.bashrc
-RUN echo "source /home/wayming/install/setup.bash" >> ~/.bashrc
+RUN echo "source $HOME/install/setup.bash" >> ~/.bashrc
 RUN echo "source /usr/share/colcon_argcomplete/hook/colcon-argcomplete.bash" >> ~/.bashrc
 RUN echo "export TURTLEBOT3_MODEL=waffle" >> ~/.bashrc
 RUN echo "#export RMW_IMPLEMENTATION=rmw_cyclonedds_pcpp" >> ~/.bashrc
-
 RUN echo "export AEROSTACK2_PATH=$HOME/src/aerostack2" >> ~/.bashrc
 RUN echo "source $HOME/src/aerostack2/as2_cli/setup_env.bash" >> ~/.bashrc
+
 CMD ["/bin/bash"]
