--- a/src/.devcontainer/devcontainer.json
+++ b/src/.devcontainer/devcontainer.json
@@ -39,5 +39,5 @@
         "source=${localWorkspaceFolder}/../cache/humble/install,target=/home/wayming/install,type=bind",
         "source=${localWorkspaceFolder}/../cache/humble/log,target=/home/wayming/log,type=bind"
     ],
-    "postCreateCommand": "sudo rosdep update && sudo rosdep install --from-paths src --ignore-src -y && sudo chown -R wayming /home/wayming/"
+    "postCreateCommand": "sh build.sh"
 }
